--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-08	Jannis Pohlmann <jannis@xfce.org>
+
+	* libexo-0.3.pot, *.po: Update translation files (no real changes
+	  though).
+
 2009-04-08  Piotr Sokół <piotr.sokol@10g.pl>
 
 	* pl.po: Polish translation update
