--- a/po/pl.po
+++ b/po/pl.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-10 23:57+0100\n"
+"POT-Creation-Date: 2009-04-08 13:54+0200\n"
 "PO-Revision-Date: 2009-04-07 09:34+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
@@ -43,10 +43,8 @@ msgstr "rozmiar"
 msgid "The size of the icon to render in pixels."
 msgstr "Rozmiar ikony do renderowania w pikselach."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Nie udało się otworzyć pliku „%s”: %s"
@@ -58,11 +56,13 @@ msgstr "Nie udało się odczytać pliku „%s”: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Nie udało się wczytać obrazu „%s”: przyczyna nieznana, prawdopodobnie uszkodzony plik obrazu"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Nie udało się wczytać obrazu „%s”: przyczyna nieznana, prawdopodobnie "
+"uszkodzony plik obrazu"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Orientacja"
 
@@ -70,23 +70,19 @@ msgstr "Orientacja"
 msgid "The orientation of the iconbar"
 msgstr "Orientacja paska ikon"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Kolumna ikon"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Kolumna modelowa używana do pobierania ikon"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Kolumna tekstu"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Kolumna modelowa używana do pobierania tekstu"
 
@@ -106,33 +102,27 @@ msgstr "Aktywny"
 msgid "Active item index"
 msgstr "Indeks aktywnego elementu"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Wypełnienie aktywnego elementu"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Obramowanie aktywnego elementu"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Kolor tekstu aktywnego elementu"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Wypełnienie kursora nad elementem"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Obramowanie kursora nad elementem"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Kolor tekstu pod kursorem"
 
@@ -202,8 +192,7 @@ msgid "All Icons"
 msgstr "Wszystkie ikony"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Pliki graficzne"
 
@@ -266,7 +255,9 @@ msgstr "Kolumna znaczników"
 
 #: ../exo/exo-icon-view.c:757
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Modelowa kolumna używana do pozyskania tekstu w przypadku stosowania znaczników Pango"
+msgstr ""
+"Modelowa kolumna używana do pozyskania tekstu w przypadku stosowania "
+"znaczników Pango"
 
 #: ../exo/exo-icon-view.c:771
 msgid "Icon View Model"
@@ -277,7 +268,8 @@ msgid "The model for the icon view"
 msgstr "Model dla widoku ikon"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
 msgstr "Jak tekst i ikony są ustawione względem siebie"
 
 #: ../exo/exo-icon-view.c:818
@@ -312,25 +304,25 @@ msgstr "Tryb zaznaczania"
 msgid "The selection mode"
 msgstr "Tryb zaznaczania"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Pojedyncze kliknięcie"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Czy jedno kliknięcie ma aktywować element "
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Limit czasowy pojedynczego kliknięcia"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Opóźnienie czasowe, po którym element zostanie automatycznie zaznaczony przez stojący nad nim kursor myszy"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Opóźnienie czasowe, po którym element zostanie automatycznie zaznaczony "
+"przez stojący nad nim kursor myszy"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -360,8 +352,7 @@ msgstr "Nieprzezroczystość pola wyboru"
 msgid "Preview"
 msgstr "Podgląd"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Nie wybrano pliku"
 
@@ -390,8 +381,12 @@ msgid "_Add a new toolbar"
 msgstr "_Dodaj nowy pasek narzędziowy"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Proszę przeciągnąć jeden z powyższych elementów na pasek narzędziowy aby go dodać, lub element z paska narzędziowego na listę elementów, aby go usunąć."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Proszę przeciągnąć jeden z powyższych elementów na pasek narzędziowy aby go "
+"dodać, lub element z paska narzędziowego na listę elementów, aby go usunąć."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -534,11 +529,9 @@ msgstr "  --strip-comments  Usuwa komentarze z plików XML\n"
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Usuwa zawartość węzłów z plików XML\n"
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:169
-#: ../exo-open/main.c:129
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
+#: ../exo-open/main.c:131
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -553,11 +546,9 @@ msgstr ""
 "Napisane przez Benedikta Meurera <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:173
-#: ../exo-open/main.c:133
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
+#: ../exo-open/main.c:135
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -572,11 +563,9 @@ msgstr ""
 "pakiecie źródłowy %s.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:177
-#: ../exo-open/main.c:137
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
+#: ../exo-open/main.c:139
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Błędy proszę zgłaszać na <%s>.\n"
@@ -665,8 +654,13 @@ msgid "Use _startup notification"
 msgstr "P_owiadamianie o uruchamianiu"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Powiadamia o uruchomieniu polecenia z menedżera plików lub menu. Nie każdy program jest obsługiwany."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Powiadamia o uruchomieniu polecenia z menedżera plików lub menu. Nie każdy "
+"program jest obsługiwany."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -731,10 +725,8 @@ msgstr "Określa domyślny adres URL nowego pliku pulpitu"
 msgid "Preset icon when creating a desktop file"
 msgstr "Określa domyślną ikonę nowego pliku pulpitu"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Wypisuje informacje o wersji i kończy"
 
@@ -743,8 +735,7 @@ msgstr "Wypisuje informacje o wersji i kończy"
 msgid "[FILE|FOLDER]"
 msgstr "[PLIK|KATALOG]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Nie udało się otworzyć ekranu"
@@ -1079,7 +1070,9 @@ msgid "SOCKET ID"
 msgstr "ID gniazda"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
 msgstr ""
 "Uruchamia domyślny program określonego typu\n"
 "                                  z opcjonalnymi parametrami"
@@ -1269,15 +1262,13 @@ msgstr "Nieznany błąd"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "Urządzenie „%s” nie zostało znalezione w systemowej tablicy urządzeń"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "Podane urządzenie „%s” nie jest wolumenem ani napędem"
@@ -1302,13 +1293,19 @@ msgstr "Brak wystarczających uprawnień by zamontować nośnik „%s”"
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Puste płyty nie są montowane. Płytę można nagrać przy użyciu programu takiego jak Xfburn"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Puste płyty nie są montowane. Płytę można nagrać przy użyciu programu "
+"takiego jak Xfburn"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "Płyty Audio nie są montowane. Płytę można odtworzyć przy użyciu użyć programu takiego jak Xfmedia"
+msgstr ""
+"Płyty Audio nie są montowane. Płytę można odtworzyć przy użyciu użyć "
+"programu takiego jak Xfmedia"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
@@ -1338,7 +1335,8 @@ msgstr "Program uniemożliwia odmontowanie wolumenu „%s”"
 #: ../exo-mount/exo-mount-hal.c:1031
 #, c-format
 msgid "The volume \"%s\" was probably mounted manually on the command line"
-msgstr "Wolumen „%s” został prawdopodobnie ręcznie zamontowany za pomocą terminala"
+msgstr ""
+"Wolumen „%s” został prawdopodobnie ręcznie zamontowany za pomocą terminala"
 
 #: ../exo-mount/main.c:65
 msgid "Eject rather than mount"
@@ -1375,8 +1373,12 @@ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr "Nie można podawać jednocześnie pliku urządzenia i jego HALowego UDI"
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-msgstr "Nie można zamontować poprzez UDI urządzenia HAL, ponieważ obsługa HAL została wyłączona w tej kompilacji programu"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
+msgstr ""
+"Nie można zamontować poprzez UDI urządzenia HAL, ponieważ obsługa HAL "
+"została wyłączona w tej kompilacji programu"
 
 #: ../exo-mount/main.c:161
 #, c-format
@@ -1430,8 +1432,12 @@ msgstr "Odmontowywanie urządzenia"
 
 #: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Urządzenie „%s” jest odmontowywane z systemu. Proszę nie odłączać urządzenia ani nie wyjmować nośnika."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"Urządzenie „%s” jest odmontowywane z systemu. Proszę nie odłączać urządzenia "
+"ani nie wyjmować nośnika."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:240
@@ -1440,8 +1446,12 @@ msgstr "Zapisywanie danych na urządzeniu"
 
 #: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Pewne dane muszą zostać zapisane na urządzeniu „%s” przed odłączeniem. Proszę nie odłączać urządzenia ani nie wyjmować nośnika."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Pewne dane muszą zostać zapisane na urządzeniu „%s” przed odłączeniem. "
+"Proszę nie odłączać urządzenia ani nie wyjmować nośnika."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1453,16 +1463,20 @@ msgstr "        exo-open --launch TYP [PARAMETR...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Wypisuje komunikat pomocy i kończy"
+msgstr ""
+"  -?, --help                          Wypisuje komunikat pomocy i kończy"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Wypisuje informacje o wersji i kończy"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Wypisuje informacje o wersji i kończy"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYP [PARAMETR...]          Uruchamia preferowany program dla\n"
@@ -1471,10 +1485,12 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory KATALOG         Określa domyślny katalog roboczy programu\n"
+"  --working-directory KATALOG         Określa domyślny katalog roboczy "
+"programu\n"
 "                                      przy użyciu parametru --launch"
 
 #: ../exo-open/main.c:72
@@ -1508,28 +1524,33 @@ msgstr ""
 "i przekazanie mu dodatkowych parametrów (np. dla TerminalEmulator\n"
 "można podać polecenie, które ma zostać uruchomione wewnątrz terminala)."
 
-#: ../exo-open/main.c:149
+#: ../exo-open/main.c:170
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Nie udało się uruchomić preferowanego programu dla kategorii „%s”."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:191
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Nie udało się otworzyć adresu URL „%s”."
 
 #~ msgid "Xfce 4 Preferred Applications"
 #~ msgstr "Preferowane aplikacje Xfce 4"
+
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "Nie udało się uruchomić preferowanych aplikacji exo"
+
 #~ msgid "Button Label|Preferred Applications"
 #~ msgstr "Preferowane Aplikacje"
+
 #~ msgid "Sylpheed Claws"
 #~ msgstr "Sylpheed Claws"
+
 #~ msgid "Failed to open display: %s"
 #~ msgstr "Nie udało się otworzyć ekranu: %s."
+
 #~ msgid "Select an Icon"
 #~ msgstr "Wybierz ikonę"
+
 #~ msgid "Default Web Browser"
 #~ msgstr "Domyślna przeglądarka WWW"
-
