--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-10 23:57+0100\n"
+"POT-Creation-Date: 2009-04-08 13:54+0200\n"
 "PO-Revision-Date: 2009-02-25 16:30+0100\n"
 "Last-Translator: Nuno Miguel <nunis@netcabo.pt>\n"
 "Language-Team: \n"
@@ -41,10 +41,8 @@ msgstr "tamanho"
 msgid "The size of the icon to render in pixels."
 msgstr "O tamanho do ícone a renderizar em pixeis."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Falhou ao abrir o ficheiro \"%s\": %s."
@@ -56,11 +54,13 @@ msgstr "Falhou ao ler o ficheiro \"%s\": %s."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Falhou ao carregar a imagem \"%s\": Razão desconhecida, provavelmente um ficheiro de imagem corrompido"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Falhou ao carregar a imagem \"%s\": Razão desconhecida, provavelmente um "
+"ficheiro de imagem corrompido"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Orientação"
 
@@ -68,23 +68,19 @@ msgstr "Orientação"
 msgid "The orientation of the iconbar"
 msgstr "A orientação da barra de ícones"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Coluna Pixbuf"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Coluna de modelo usada para retirar o ícone pixbuf"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Coluna de texto"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Coluna de modelo usada para retirar o texto"
 
@@ -104,33 +100,27 @@ msgstr "Activo"
 msgid "Active item index"
 msgstr "Índice de item activo"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Cor de preenchimento de item activo"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Cor de borda de item activo"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Cor de texto de item activo"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "Cor de preenchimento de item de cursor"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "Cor de borda de item de cursor"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "Cor de texto de item de cursor"
 
@@ -200,8 +190,7 @@ msgid "All Icons"
 msgstr "Todos os Ícones"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Ficheiros de Imagens"
 
@@ -232,7 +221,8 @@ msgstr "Activar Procura"
 
 #: ../exo/exo-icon-view.c:686
 msgid "View allows user to search through columns interactively"
-msgstr "Vista permite ao utilizador procurar através das colunas interactivamente"
+msgstr ""
+"Vista permite ao utilizador procurar através das colunas interactivamente"
 
 #: ../exo/exo-icon-view.c:703
 msgid "Width for each item"
@@ -264,7 +254,8 @@ msgstr "Coluna de Marcação"
 
 #: ../exo/exo-icon-view.c:757
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Coluna do modelo usada para retirar o texto se estiver a usar marcação Pango"
+msgstr ""
+"Coluna do modelo usada para retirar o texto se estiver a usar marcação Pango"
 
 #: ../exo/exo-icon-view.c:771
 msgid "Icon View Model"
@@ -275,8 +266,11 @@ msgid "The model for the icon view"
 msgstr "O modelo para a visualização de ícone"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Como o texto e o ícone de cada item são posicionados relativamente um ao outro"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Como o texto e o ícone de cada item são posicionados relativamente um ao "
+"outro"
 
 #: ../exo/exo-icon-view.c:818
 msgid "Reorderable"
@@ -310,25 +304,25 @@ msgstr "Modo de selecção"
 msgid "The selection mode"
 msgstr "O modo de selecção"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Clique Único"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Se os itens na vista podem ser activados com cliques únicos"
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Tempo de Clique Único"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "A quantidade de tempo após a qual o item sob o ponteiro do rato será seleccionado automaticamente em modo de clique único"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"A quantidade de tempo após a qual o item sob o ponteiro do rato será "
+"seleccionado automaticamente em modo de clique único"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -358,8 +352,7 @@ msgstr "Opacidade da caixa de selecção"
 msgid "Preview"
 msgstr "Pré-visualização"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Nenhum ficheiro seleccionado"
 
@@ -388,8 +381,12 @@ msgid "_Add a new toolbar"
 msgstr "_Adicionar uma nova barra de ferramentas"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Arraste um item sobre as barras de ferramentas para adicioná-lo, a partir das barras de ferramentas para a tabela de itens para removê-lo."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Arraste um item sobre as barras de ferramentas para adicioná-lo, a partir "
+"das barras de ferramentas para a tabela de itens para removê-lo."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -532,11 +529,9 @@ msgstr "  --strip-comments  Remove comentários de ficheiros XML\n"
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Remove nós de conteúdo de ficheiros XML\n"
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:169
-#: ../exo-open/main.c:129
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
+#: ../exo-open/main.c:131
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -551,11 +546,9 @@ msgstr ""
 "Escrito por Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:173
-#: ../exo-open/main.c:133
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
+#: ../exo-open/main.c:135
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -570,11 +563,9 @@ msgstr ""
 "encontrada no pacote de origem %s.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:177
-#: ../exo-open/main.c:137
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
+#: ../exo-open/main.c:139
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Por favor, relate problemas para <%s>.\n"
@@ -663,8 +654,14 @@ msgid "Use _startup notification"
 msgstr "Usar _notificação de arranque"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Seleccione esta opção para ligar a notificação de arranque quando o comando é executado a partir do gestor de ficheiros ou do menu. Nem todas as aplicações suportam notificação de arranque."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Seleccione esta opção para ligar a notificação de arranque quando o comando "
+"é executado a partir do gestor de ficheiros ou do menu. Nem todas as "
+"aplicações suportam notificação de arranque."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -705,7 +702,8 @@ msgstr "Criar um novo ficheiro de ambiente de trabalho no directório dado"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Tipo de ficheiro de ambiente de trabalho a criar (Aplicação ou Ligação)"
+msgstr ""
+"Tipo de ficheiro de ambiente de trabalho a criar (Aplicação ou Ligação)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
@@ -727,10 +725,8 @@ msgstr "URL pré-ajustada ao criar uma ligação"
 msgid "Preset icon when creating a desktop file"
 msgstr "Ícone pré-ajustado ao criar um ficheiro do ambiente de trabalho"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Mostra informação de versão e sai"
 
@@ -739,8 +735,7 @@ msgstr "Mostra informação de versão e sai"
 msgid "[FILE|FOLDER]"
 msgstr "[FICHEIRO|PASTA]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Falha ao abrir o ecrã"
@@ -929,7 +924,8 @@ msgstr "Falhou ao abrir o navegador de documentação."
 #: ../exo-helper/exo-helper-chooser.c:184
 #: ../exo-helper/exo-helper-chooser.c:191
 msgid "Press left mouse button to change the selected application."
-msgstr "Pressione o botão esquerdo do rato para mudar a aplicação seleccionada."
+msgstr ""
+"Pressione o botão esquerdo do rato para mudar a aplicação seleccionada."
 
 #: ../exo-helper/exo-helper-chooser.c:190
 msgid "Application Chooser Button"
@@ -1044,7 +1040,9 @@ msgstr "Falhou ao abrir helpers.rc para escrita"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Aplicações Preferidas (Navegador Web, Leitor de Email, e Emulador de Terminal)"
+msgstr ""
+"Aplicações Preferidas (Navegador Web, Leitor de Email, e Emulador de "
+"Terminal)"
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
@@ -1075,8 +1073,12 @@ msgid "SOCKET ID"
 msgstr "SOCKET ID"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Lançar o assistente de TIPO com o PARÂMETRO opcional, onde TIPO é um dos seguintes valores."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Lançar o assistente de TIPO com o PARÂMETRO opcional, onde TIPO é um dos "
+"seguintes valores."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1262,15 +1264,13 @@ msgstr "Erro desconhecido"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "Dispositivo \"%s\" não encontrado na tabela de sistemas de ficheiros"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "Dispositivo \"%s\" não é volume ou drive"
@@ -1295,8 +1295,12 @@ msgstr "Não tem privilégios para montar o volume \"%s\""
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Discos vazios não podem ser montados, use um programa para gravação de CD como Xfburn"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Discos vazios não podem ser montados, use um programa para gravação de CD "
+"como Xfburn"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
@@ -1313,7 +1317,8 @@ msgstr "Não tem privilégios para desmontar a camada criptografada"
 #: ../exo-mount/exo-mount-hal.c:937
 #, c-format
 msgid "An application is preventing the crypto layer from being torn down"
-msgstr "Uma aplicação está impedindo que a camada criptografada seja desmontada"
+msgstr ""
+"Uma aplicação está impedindo que a camada criptografada seja desmontada"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:1021
@@ -1365,11 +1370,16 @@ msgstr "Especifique o HAL device UDI ou ficheiro de dispositivo"
 #. the caller must specify EITHER a HAL UDI or a device file
 #: ../exo-mount/main.c:146
 msgid "Must not specify both a HAL device UDI and a device file simultaneously"
-msgstr "Não pode indicar um HAL device UDI e ficheiro de dispositivo ao mesmo tempo"
+msgstr ""
+"Não pode indicar um HAL device UDI e ficheiro de dispositivo ao mesmo tempo"
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-msgstr "Impossível montar através de HAL device UDI, porque o suporte HAL foi desligado."
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
+msgstr ""
+"Impossível montar através de HAL device UDI, porque o suporte HAL foi "
+"desligado."
 
 #: ../exo-mount/main.c:161
 #, c-format
@@ -1423,8 +1433,12 @@ msgstr "A desmontar dispositivo"
 
 #: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Dispositivo \"%s\" a ser desmontado pelo sistema. Por favor não remova nem desligue a drive."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"Dispositivo \"%s\" a ser desmontado pelo sistema. Por favor não remova nem "
+"desligue a drive."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:240
@@ -1433,8 +1447,12 @@ msgstr "A escrever dados no dispositivo"
 
 #: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Existem dados a serem escritos no dispositivo \"%s\" antes de ser removido. Não remova ou desligue a drive."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Existem dados a serem escritos no dispositivo \"%s\" antes de ser removido. "
+"Não remova ou desligue a drive."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1446,16 +1464,20 @@ msgstr "       exo-open --launch TIPO [PARÂMETROs...]"
 
 #: ../exo-open/main.c:62
 msgid "  -?, --help                          Print this help message and exit"
-msgstr "  -?, --help                          Mostra esta mensagem de ajuda e sai"
+msgstr ""
+"  -?, --help                          Mostra esta mensagem de ajuda e sai"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Mostra informação de versão e sai"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Mostra informação de versão e sai"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TIPO [PARÂMETROs...]       Executar a aplicação preferida do\n"
@@ -1464,10 +1486,12 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIRECTÓRIO       Directório de trabalho por omissão para\n"
+"  --working-directory DIRECTÓRIO       Directório de trabalho por omissão "
+"para\n"
 "                                     aplicações ao usar a opção --launch."
 
 #: ../exo-open/main.c:72
@@ -1502,13 +1526,12 @@ msgstr ""
 "TerminalEmulator pode passar a linha de comando que deve ser\n"
 "executada dentro do terminal)."
 
-#: ../exo-open/main.c:149
+#: ../exo-open/main.c:170
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Falhou ao executar aplicação preferida para categoria \"%s\"."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:191
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Falhou ao abrir a URL \"%s\"."
-
