--- a/po/tr.po
+++ b/po/tr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-01-10 23:57+0100\n"
+"POT-Creation-Date: 2009-04-08 13:54+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Gökmen Görgen <gkmngrgn@gmail.com>\n"
 "Language-Team: Turkish <turkce@pardus.org.tr>\n"
@@ -45,10 +45,8 @@ msgstr "boyut"
 msgid "The size of the icon to render in pixels."
 msgstr "Farklılaştırılacak simgenin piksel cinsinden değeri."
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "\"%s\" dosyası açılamadı: %s"
@@ -60,11 +58,12 @@ msgstr "\"%s\" dosyası okunamadı: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "\"%s\" kalıbı yüklenemedi: Bilinmeyen neden, büyük olasılıkla bozuk dosya"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"\"%s\" kalıbı yüklenemedi: Bilinmeyen neden, büyük olasılıkla bozuk dosya"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Uyumlaştırma"
 
@@ -72,23 +71,19 @@ msgstr "Uyumlaştırma"
 msgid "The orientation of the iconbar"
 msgstr "Simge çubuğunun uyumlaştırılması"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 msgid "Pixbuf column"
 msgstr "Pixbuf dikeci"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Pixbuf simgesini yeniden düzenlemek amacıyla kullanılan model dikeci"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 msgid "Text column"
 msgstr "Metin dikeci"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 msgid "Model column used to retrieve the text from"
 msgstr "Metin formunu yeniden düzenlemek amacıyla kullanılan model dikeci"
 
@@ -108,33 +103,27 @@ msgstr "Etkin"
 msgid "Active item index"
 msgstr "Etkin öğe içeriği"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 msgid "Active item fill color"
 msgstr "Etkin öğe dolgu rengi"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 msgid "Active item border color"
 msgstr "Etkin öğe kenar rengi"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
 msgstr "Etkin öğe metin rengi"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 msgid "Cursor item fill color"
 msgstr "İmleç öğesi dolgu rengi"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 msgid "Cursor item border color"
 msgstr "İmleç öğesi kenar rengi"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 msgid "Cursor item text color"
 msgstr "İmleç öğesi metin rengi"
 
@@ -204,8 +193,7 @@ msgid "All Icons"
 msgstr "Bütün Simgeler"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Kalıp Dosyaları"
 
@@ -268,7 +256,9 @@ msgstr "Biçimleme dikeci"
 
 #: ../exo/exo-icon-view.c:757
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Pango biçimlemesi kullanılırken metni yeniden düzenlemek amacıyla kullanılan model dikeci"
+msgstr ""
+"Pango biçimlemesi kullanılırken metni yeniden düzenlemek amacıyla kullanılan "
+"model dikeci"
 
 #: ../exo/exo-icon-view.c:771
 msgid "Icon View Model"
@@ -279,8 +269,11 @@ msgid "The model for the icon view"
 msgstr "Simge görünümü için model"
 
 #: ../exo/exo-icon-view.c:786
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Her bir öğenin metin ve simgesinin birbiriyle ilişkili olarak nasıl konumlandırılacağı"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Her bir öğenin metin ve simgesinin birbiriyle ilişkili olarak nasıl "
+"konumlandırılacağı"
 
 #: ../exo/exo-icon-view.c:818
 msgid "Reorderable"
@@ -314,25 +307,25 @@ msgstr "Seçim modu"
 msgid "The selection mode"
 msgstr "Seçim modu"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Tek Tıklama"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Görünen öğeler için etkinleştirilmiş tek tıklama"
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 msgid "Single Click Timeout"
 msgstr "Tek Tıklama Zaman Aşımı"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "Tek tıklama modundayken fare imlecinin altındaki öğenin otomatik olarak seçilmesinden sonraki geçen zaman"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
+msgstr ""
+"Tek tıklama modundayken fare imlecinin altındaki öğenin otomatik olarak "
+"seçilmesinden sonraki geçen zaman"
 
 #: ../exo/exo-icon-view.c:913
 msgid "Spacing"
@@ -362,8 +355,7 @@ msgstr "Seçim Kutusunun Saydamsızlığı"
 msgid "Preview"
 msgstr "Önizleme"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Seçili dosya yok"
 
@@ -392,8 +384,12 @@ msgid "_Add a new toolbar"
 msgstr "Yeni bir _araç çubuğu ekle"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Bir öğeyi eklemek için onu araç çubuklarının üzerine; kaldırmak içinse araç çubuklarından dışarıya sürükleyin."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
+msgstr ""
+"Bir öğeyi eklemek için onu araç çubuklarının üzerine; kaldırmak içinse araç "
+"çubuklarından dışarıya sürükleyin."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -536,11 +532,9 @@ msgstr "  --strip-comments  Yorumları XML dosyalarından kaldır\n"
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr "  --strip-content   Düğüm bileşenlerini XML dosyalarından kaldır\n"
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:169
-#: ../exo-open/main.c:129
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
+#: ../exo-open/main.c:131
 #, c-format
 msgid ""
 "Copyright (c) %s\n"
@@ -555,11 +549,9 @@ msgstr ""
 "Benedikt Meurer tarafından yazılmıştır, <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:173
-#: ../exo-open/main.c:133
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
+#: ../exo-open/main.c:135
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -575,11 +567,9 @@ msgstr ""
 "lisanslanmıştır.\n"
 "\n"
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:177
-#: ../exo-open/main.c:137
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
+#: ../exo-open/main.c:139
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Lütfen hataları bildirin: <%s>.\n"
@@ -668,8 +658,14 @@ msgid "Use _startup notification"
 msgstr "_Sistem açılış bildirimini kullan"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Komut, dosya yöneticisi veya menüden çalışırken sistem açılış bildirimini etkinleştirmek için bu seçeneği seçin; fakat her uygulama, sistem açılış bildirimini desteklememektedir."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
+msgstr ""
+"Komut, dosya yöneticisi veya menüden çalışırken sistem açılış bildirimini "
+"etkinleştirmek için bu seçeneği seçin; fakat her uygulama, sistem açılış "
+"bildirimini desteklememektedir."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -732,10 +728,8 @@ msgstr "Bir bağlantı oluşturulurken, önceden belirlenmiş bağlantı adresi"
 msgid "Preset icon when creating a desktop file"
 msgstr "Bir masaüstü dosyası oluşturulurken, önceden belirlenmiş simge"
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Sürüm bilgisini yazdır ve çık"
 
@@ -744,8 +738,7 @@ msgstr "Sürüm bilgisini yazdır ve çık"
 msgid "[FILE|FOLDER]"
 msgstr "[FILE|FOLDER]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:155
 msgid "Failed to open display"
 msgstr "Görüntü açılamadı"
@@ -1049,7 +1042,9 @@ msgstr "helpers.rc, yazılacak şekilde açılamadı"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
-msgstr "Tercih Edilen Uygulamalar (İnternet Tarayıcısı, Eposta Okuyucusu ve Uçbirim Öykünücüsü)"
+msgstr ""
+"Tercih Edilen Uygulamalar (İnternet Tarayıcısı, Eposta Okuyucusu ve Uçbirim "
+"Öykünücüsü)"
 
 #: ../exo-helper/main.c:42
 msgid "Failed to execute default Web Browser"
@@ -1080,8 +1075,12 @@ msgid "SOCKET ID"
 msgstr "YUVA ID'si"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
-msgstr "Aşağıdaki TİPlerden birinin öntanımlı yardımcısını, seçenekli PARAMETRE'lerle başlat."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
+msgstr ""
+"Aşağıdaki TİPlerden birinin öntanımlı yardımcısını, seçenekli "
+"PARAMETRE'lerle başlat."
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
@@ -1268,15 +1267,13 @@ msgstr "Bilinmeyen hata"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr "\"%s\" sürücüsü, dosya sistemi sürücü tablosunda bulunamadı"
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr "Verilen \"%s\" sürücüsü, bir sürücü veya geçerli bir birim değil"
@@ -1301,13 +1298,18 @@ msgstr "\"%s\" sürücüsünü ayarlamak için gerekli izniniz yok"
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
-msgstr "Boş diskler bağlanamadı, diske bir veri veya ses kaydetmek için Xfburn gibi bir CD yazdırma uygulaması kullanın"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
+msgstr ""
+"Boş diskler bağlanamadı, diske bir veri veya ses kaydetmek için Xfburn gibi "
+"bir CD yazdırma uygulaması kullanın"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "Ses CD'si bağlanılamadı, ses izlerini oynatabilmek için Xfmedia kullanın."
+msgstr ""
+"Ses CD'si bağlanılamadı, ses izlerini oynatabilmek için Xfmedia kullanın."
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
@@ -1371,11 +1373,16 @@ msgstr "HAL sürücüsü UDI ya da sürücüsü dosyası belirtilmeli"
 #. the caller must specify EITHER a HAL UDI or a device file
 #: ../exo-mount/main.c:146
 msgid "Must not specify both a HAL device UDI and a device file simultaneously"
-msgstr "Eşzamanlı olarak hem bir HAL sürücüsü UDI hem de sürücü dosyası belirtilmeli "
+msgstr ""
+"Eşzamanlı olarak hem bir HAL sürücüsü UDI hem de sürücü dosyası belirtilmeli "
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
-msgstr "HAL sürücüsü UDI bağlanılamıyor, çünkü bu yapı için HAL desteği etkinleştirilmemiş"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
+msgstr ""
+"HAL sürücüsü UDI bağlanılamıyor, çünkü bu yapı için HAL desteği "
+"etkinleştirilmemiş"
 
 #: ../exo-mount/main.c:161
 #, c-format
@@ -1429,8 +1436,12 @@ msgstr "Sürücü bağlanılamıyor"
 
 #: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "\"%s\" sürücüsü sistem tarafından bağlanılamadı. Lütfen ortamı kaldırmayın ya da sürücüyle bağlantıyı kesmeyin."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
+msgstr ""
+"\"%s\" sürücüsü sistem tarafından bağlanılamadı. Lütfen ortamı kaldırmayın "
+"ya da sürücüyle bağlantıyı kesmeyin."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:240
@@ -1439,8 +1450,12 @@ msgstr "Veriler sürücüye yazılıyor"
 
 #: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
-msgstr "Kaldırılmadan önce \"%s\" sürücüsüne yazılması gereken veri var. Lütfen ortamı kaldırmayın ve sürücüyle bağlantıyı kesmeyin."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
+msgstr ""
+"Kaldırılmadan önce \"%s\" sürücüsüne yazılması gereken veri var. Lütfen "
+"ortamı kaldırmayın ve sürücüyle bağlantıyı kesmeyin."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
@@ -1455,13 +1470,15 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr "  -?, --help                          Bu mesajı yazdır ve çık"
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
+msgid ""
+"  -V, --version                       Print version information and exit"
 msgstr "  -V, --version                       Sürüm bilgisini yazdır ve çık"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TÜR [PARAMETREler...]      TÜR'e karşılık gelen uygulamayı,\n"
@@ -1469,10 +1486,12 @@ msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIRECTORY       --launch seçeneğinin kullanıldığı, uygulamaların\n"
+"  --working-directory DIRECTORY       --launch seçeneğinin kullanıldığı, "
+"uygulamaların\n"
 "                                        öntanımlı çalışma dizini."
 
 #: ../exo-open/main.c:72
@@ -1503,23 +1522,25 @@ msgstr ""
 "Eğer --launch seçeneğini belirlemezseniz, exo-open tüm belirtilmiş bağlantı\n"
 "adreslerini, kendi tercih ettiği bağlantı işleyicileri ile açacak. Ama bu\n"
 "seçeneği belirtirseniz, hangi uygulamayla beraber açmak istediğinizi ve\n"
-"istediğiniz uygulamayla ilgili parametreleri de seçebilirsiniz (örneğin Uçbirim\n"
+"istediğiniz uygulamayla ilgili parametreleri de seçebilirsiniz (örneğin "
+"Uçbirim\n"
 "Öykünücüsü için, uçbirimde çalıştırılmış biçimde komut satırını geçmek gibi)."
 
-#: ../exo-open/main.c:149
+#: ../exo-open/main.c:170
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Tercih edilen uygulama, \"%s\" sıralamasına göre açılamadı."
 
-#: ../exo-open/main.c:170
+#: ../exo-open/main.c:191
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "\"%s\" bağlantısı açılamadı."
 
 #~ msgid "Xfce 4 Preferred Applications"
 #~ msgstr "Xfce 4 Tercih Edilen Uygulamalar"
+
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "exo-preferred-applications başlatılamadı"
+
 #~ msgid "Button Label|Preferred Applications"
 #~ msgstr "Buton EtiketilTercih Edilen Uygulamalar"
-
