Update NEWS, ChangeLog and version info
(Old svn revision: 29784)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-04-12  Stephan Arts <stephan@xfce.org>
+
+	* == Released 0.3.101 ==
+	* NEWS: Update news for the release.
+	* configure.in.in: Update version number.
+
 2009-04-08	Jannis Pohlmann <jannis@xfce.org>
 
 	* configure.in.in, docs/manual/da/images/, docs/manual/gl/images/: Fix
