galician translation update
(Old svn revision: 29822)

--- a/po-doc/gl.po
+++ b/po-doc/gl.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: xfce-i18n@xfce.org\n"
 "POT-Creation-Date: 2006-05-05 02:50+0900\n"
-"PO-Revision-Date: 2009-03-07 22:18+0100\n"
-"Last-Translator: Leandro Regueiro <leandro DOT regueiro AT gmail DOT com>\n"
+"PO-Revision-Date: 2009-04-14 22:14+0100\n"
+"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,18 +103,16 @@ msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:80(title)
 #: ../docs/manual/C/exo-preferred-applications.xml.in:91(title)
-#, fuzzy
 msgid "Internet applications"
-msgstr "Aplicacións r_ecentes:"
+msgstr "Aplicacións de Internet"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:82(para)
 msgid "The first page of the configuration dialog allows you to select your preferred Web Browser and Mail Reader. The selected Web Browser will be used to open hyperlinks that you click on and to display the documentation, whereas the Mail Reader will be used to compose mails."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:98(phrase)
-#, fuzzy
 msgid "Select internet applications"
-msgstr "Seleccione as súas aplicacións predeterminadas"
+msgstr "Seleccionar aplicacións de Internet"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:104(para)
 msgid "To select a different Web Browser than the current default one, click on the button in the <guilabel>Default Web Browser</guilabel> section and a list of web browsers that were detected on your system will appear, as shown in <xref linkend=\"configuration-webbrowser-menu\"/>."
@@ -142,9 +140,8 @@ msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:163(title)
 #: ../docs/manual/C/exo-preferred-applications.xml.in:174(title)
-#, fuzzy
 msgid "Other applications"
-msgstr "Aplicacións r_ecentes:"
+msgstr "Outras aplicacións"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:165(para)
 msgid "The first page of the configuration dialog allows you to select your preferred terminal emulator. The preferred terminal emulator will be used throughout the Xfce Desktop Environment to launch applications that need to be run in a CLI (command line interface) environment."
