--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-16  Mike Massonnet <mmassonnet@xfce.org>
+
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2009-04-08	Jannis Pohlmann <jannis@xfce.org>
 
 	* libexo-0.3.pot, *.po: Update translation files (no real changes
