--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-05	Jannis Pohlmann <jannis@xfce.org>
+
+	* libexo-0.3.pot, *.po: Merge new strings.
+
 2009-04-20  Mike Massonnet <mmassonnet@xfce.org>
 
 	* pt.po: Portuguese translation update (Nuno Miguel)
