--- a/po/gl.po
+++ b/po/gl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-08 13:54+0200\n"
+"POT-Creation-Date: 2009-05-05 22:04+0200\n"
 "PO-Revision-Date: 2009-04-14 22:13+0100\n"
 "Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -21,37 +21,45 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
-#: ../exo/exo-cell-renderer-icon.c:145
+#: ../exo/exo-cell-renderer-icon.c:150
 #, fuzzy
 msgid "Follow state"
 msgstr "Seguir o estado"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
-#: ../exo/exo-cell-renderer-icon.c:146
+#: ../exo/exo-cell-renderer-icon.c:151
 msgid "Render differently based on the selection state."
 msgstr ""
 
-#: ../exo/exo-cell-renderer-icon.c:167
+#: ../exo/exo-cell-renderer-icon.c:172
 msgid "Icon"
 msgstr "Icona"
 
-#: ../exo/exo-cell-renderer-icon.c:168
+#: ../exo/exo-cell-renderer-icon.c:173
 #, fuzzy
 msgid "The icon to render."
 msgstr "O ID de inventario da icona de inventario para renderizar"
 
-#: ../exo/exo-cell-renderer-icon.c:189
+#: ../exo/exo-cell-renderer-icon.c:191
+#, fuzzy
+msgid "GIcon"
+msgstr "Icona"
+
+#: ../exo/exo-cell-renderer-icon.c:192
+#, fuzzy
+msgid "The GIcon to render."
+msgstr "O ID de inventario da icona de inventario para renderizar"
+
+#: ../exo/exo-cell-renderer-icon.c:213
 msgid "size"
 msgstr "tamaño"
 
-#: ../exo/exo-cell-renderer-icon.c:190
+#: ../exo/exo-cell-renderer-icon.c:214
 msgid "The size of the icon to render in pixels."
 msgstr ""
 
-#: ../exo/exo-gdk-pixbuf-extensions.c:770
-#: ../exo/exo-mount-point.c:208
-#: ../exo/exo-mount-point.c:237
-#: ../exo/exo-mount-point.c:425
+#: ../exo/exo-gdk-pixbuf-extensions.c:770 ../exo/exo-mount-point.c:208
+#: ../exo/exo-mount-point.c:237 ../exo/exo-mount-point.c:425
 #, fuzzy, c-format
 msgid "Failed to open file \"%s\": %s"
 msgstr "Fallo ao abrir o ficheiro '%s': %s"
@@ -63,11 +71,13 @@ msgstr "Fallo ao ler o ficheiro '%s': %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, fuzzy, c-format
-msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Non se puido cargar a imaxe '%s': o motivo é descoñecido, probabelmente o ficheiro gráfico está corrupto"
+msgid ""
+"Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
+msgstr ""
+"Non se puido cargar a imaxe '%s': o motivo é descoñecido, probabelmente o "
+"ficheiro gráfico está corrupto"
 
-#: ../exo/exo-icon-bar.c:249
-#: ../exo/exo-icon-view.c:785
+#: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:785
 msgid "Orientation"
 msgstr "Orientación"
 
@@ -76,26 +86,22 @@ msgstr "Orientación"
 msgid "The orientation of the iconbar"
 msgstr "Orientación da páxina:"
 
-#: ../exo/exo-icon-bar.c:266
-#: ../exo/exo-icon-view.c:802
+#: ../exo/exo-icon-bar.c:266 ../exo/exo-icon-view.c:802
 #, fuzzy
 msgid "Pixbuf column"
 msgstr "Columna de pixbuf"
 
-#: ../exo/exo-icon-bar.c:267
-#: ../exo/exo-icon-view.c:803
+#: ../exo/exo-icon-bar.c:267 ../exo/exo-icon-view.c:803
 #, fuzzy
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Columna modelo usada para recuperar o pixbuf da icona"
 
-#: ../exo/exo-icon-bar.c:282
-#: ../exo/exo-icon-view.c:929
+#: ../exo/exo-icon-bar.c:282 ../exo/exo-icon-view.c:929
 #, fuzzy
 msgid "Text column"
 msgstr "Columna de texto"
 
-#: ../exo/exo-icon-bar.c:283
-#: ../exo/exo-icon-view.c:930
+#: ../exo/exo-icon-bar.c:283 ../exo/exo-icon-view.c:930
 #, fuzzy
 msgid "Model column used to retrieve the text from"
 msgstr "Columna modelo usada para recuperar o texto"
@@ -120,38 +126,32 @@ msgstr "Activo"
 msgid "Active item index"
 msgstr "O elemento que está activo actualmente"
 
-#: ../exo/exo-icon-bar.c:319
-#: ../exo/exo-icon-bar.c:320
+#: ../exo/exo-icon-bar.c:319 ../exo/exo-icon-bar.c:320
 #, fuzzy
 msgid "Active item fill color"
 msgstr "Encher coa cor de _primeiro plano"
 
-#: ../exo/exo-icon-bar.c:326
-#: ../exo/exo-icon-bar.c:327
+#: ../exo/exo-icon-bar.c:326 ../exo/exo-icon-bar.c:327
 #, fuzzy
 msgid "Active item border color"
 msgstr "A cor do bordo da caixa realzada"
 
-#: ../exo/exo-icon-bar.c:333
-#: ../exo/exo-icon-bar.c:334
+#: ../exo/exo-icon-bar.c:333 ../exo/exo-icon-bar.c:334
 #, fuzzy
 msgid "Active item text color"
 msgstr "Escolla a cor de texto do terminal"
 
-#: ../exo/exo-icon-bar.c:340
-#: ../exo/exo-icon-bar.c:341
+#: ../exo/exo-icon-bar.c:340 ../exo/exo-icon-bar.c:341
 #, fuzzy
 msgid "Cursor item fill color"
 msgstr "Encher coa cor de _primeiro plano"
 
-#: ../exo/exo-icon-bar.c:347
-#: ../exo/exo-icon-bar.c:348
+#: ../exo/exo-icon-bar.c:347 ../exo/exo-icon-bar.c:348
 #, fuzzy
 msgid "Cursor item border color"
 msgstr "A cor do bordo da caixa realzada"
 
-#: ../exo/exo-icon-bar.c:354
-#: ../exo/exo-icon-bar.c:355
+#: ../exo/exo-icon-bar.c:354 ../exo/exo-icon-bar.c:355
 #, fuzzy
 msgid "Cursor item text color"
 msgstr "Escolla a cor de texto do terminal"
@@ -230,8 +230,7 @@ msgid "All Icons"
 msgstr "Tódalas iconas"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
-#: ../exo/exo-icon-chooser-dialog.c:115
-#: ../exo/exo-icon-chooser-dialog.c:262
+#: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
 msgstr "Ficheiros de imaxe"
 
@@ -267,7 +266,9 @@ msgstr "Activar a busca"
 #: ../exo/exo-icon-view.c:686
 #, fuzzy
 msgid "View allows user to search through columns interactively"
-msgstr "A visualización permite aos usuarios buscar de modo interactivo a través das columnas"
+msgstr ""
+"A visualización permite aos usuarios buscar de modo interactivo a través das "
+"columnas"
 
 #: ../exo/exo-icon-view.c:703
 msgid "Width for each item"
@@ -304,7 +305,8 @@ msgstr "Columna de marcación"
 #: ../exo/exo-icon-view.c:757
 #, fuzzy
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Columna modelo usada para recuperar o texto se se emprega a marcación Pango"
+msgstr ""
+"Columna modelo usada para recuperar o texto se se emprega a marcación Pango"
 
 #: ../exo/exo-icon-view.c:771
 #, fuzzy
@@ -318,8 +320,10 @@ msgstr "O modelo para a visualización de icona"
 
 #: ../exo/exo-icon-view.c:786
 #, fuzzy
-msgid "How the text and icon of each item are positioned relative to each other"
-msgstr "Como se sitúan o texto e a icona de cada elemento en relación un ao outro"
+msgid ""
+"How the text and icon of each item are positioned relative to each other"
+msgstr ""
+"Como se sitúan o texto e a icona de cada elemento en relación un ao outro"
 
 #: ../exo/exo-icon-view.c:818
 msgid "Reorderable"
@@ -354,25 +358,23 @@ msgstr "Modo de selección"
 msgid "The selection mode"
 msgstr "O modo de selección"
 
-#: ../exo/exo-icon-view.c:880
-#: ../exo/exo-tree-view.c:166
+#: ../exo/exo-icon-view.c:880 ../exo/exo-tree-view.c:166
 msgid "Single Click"
 msgstr "Un só clic"
 
-#: ../exo/exo-icon-view.c:881
-#: ../exo/exo-tree-view.c:167
+#: ../exo/exo-icon-view.c:881 ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr ""
 
-#: ../exo/exo-icon-view.c:897
-#: ../exo/exo-tree-view.c:183
+#: ../exo/exo-icon-view.c:897 ../exo/exo-tree-view.c:183
 #, fuzzy
 msgid "Single Click Timeout"
 msgstr "<b>Tempo de espera do duplo clic</b>"
 
-#: ../exo/exo-icon-view.c:898
-#: ../exo/exo-tree-view.c:184
-msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
+#: ../exo/exo-icon-view.c:898 ../exo/exo-tree-view.c:184
+msgid ""
+"The amount of time after which the item under the mouse cursor will be "
+"selected automatically in single click mode"
 msgstr ""
 
 #: ../exo/exo-icon-view.c:913
@@ -407,8 +409,7 @@ msgstr "Opacidade da caixa de selección"
 msgid "Preview"
 msgstr "Previsualización"
 
-#: ../exo/exo-thumbnail-preview.c:139
-#: ../exo/exo-thumbnail-preview.c:281
+#: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
 msgstr "Non se seleccionou ningún ficheiro"
 
@@ -439,7 +440,9 @@ msgid "_Add a new toolbar"
 msgstr "_Engadir unha nova barra de ferramentas"
 
 #: ../exo/exo-toolbars-editor.c:230
-msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
+msgid ""
+"Drag an item onto the toolbars above to add it, from the toolbars in the "
+"items table to remove it."
 msgstr ""
 
 #: ../exo/exo-toolbars-editor.c:543
@@ -591,10 +594,8 @@ msgstr ""
 msgid "  --strip-content   Remove node contents from XML files\n"
 msgstr ""
 
-#: ../exo-csource/main.c:305
-#: ../exo-desktop-item-edit/main.c:153
-#: ../exo-mount/main.c:122
-#: ../exo-mount-notify/main.c:169
+#: ../exo-csource/main.c:305 ../exo-desktop-item-edit/main.c:153
+#: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:169
 #: ../exo-open/main.c:131
 #, c-format
 msgid ""
@@ -610,10 +611,8 @@ msgstr ""
 "Escrito por Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:309
-#: ../exo-desktop-item-edit/main.c:157
-#: ../exo-mount/main.c:126
-#: ../exo-mount-notify/main.c:173
+#: ../exo-csource/main.c:309 ../exo-desktop-item-edit/main.c:157
+#: ../exo-mount/main.c:126 ../exo-mount-notify/main.c:173
 #: ../exo-open/main.c:135
 #, c-format
 msgid ""
@@ -624,10 +623,8 @@ msgid ""
 "\n"
 msgstr ""
 
-#: ../exo-csource/main.c:313
-#: ../exo-desktop-item-edit/main.c:161
-#: ../exo-mount/main.c:130
-#: ../exo-mount-notify/main.c:177
+#: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
+#: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
 #: ../exo-open/main.c:139
 #, c-format
 msgid "Please report bugs to <%s>.\n"
@@ -718,7 +715,10 @@ msgid "Use _startup notification"
 msgstr "Usar sons de notificación"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
+msgid ""
+"Select this option to enable startup notification when the command is run "
+"from the file manager or the menu. Not every application supports startup "
+"notification."
 msgstr ""
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
@@ -731,7 +731,8 @@ msgstr "Executar nun _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
-msgstr "Seleccione esta opción para executar o comando nunha ventá de terminal."
+msgstr ""
+"Seleccione esta opción para executar o comando nunha ventá de terminal."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
@@ -783,10 +784,8 @@ msgstr ""
 msgid "Preset icon when creating a desktop file"
 msgstr ""
 
-#: ../exo-desktop-item-edit/main.c:79
-#: ../exo-helper/main.c:67
-#: ../exo-mount/main.c:74
-#: ../exo-mount-notify/main.c:77
+#: ../exo-desktop-item-edit/main.c:79 ../exo-helper/main.c:67
+#: ../exo-mount/main.c:74 ../exo-mount-notify/main.c:77
 msgid "Print version information and exit"
 msgstr "Amosar a información da versión e saír"
 
@@ -795,8 +794,7 @@ msgstr "Amosar a información da versión e saír"
 msgid "[FILE|FOLDER]"
 msgstr "[FICHEIRO|CARTAFOL]"
 
-#: ../exo-desktop-item-edit/main.c:138
-#: ../exo-mount/main.c:108
+#: ../exo-desktop-item-edit/main.c:138 ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:155
 #, fuzzy
 msgid "Failed to open display"
@@ -1128,7 +1126,9 @@ msgid "SOCKET ID"
 msgstr "O ID é incorrecto!"
 
 #: ../exo-helper/main.c:70
-msgid "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is one of the following values."
+msgid ""
+"Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
+"one of the following values."
 msgstr ""
 
 #: ../exo-helper/main.c:70
@@ -1311,15 +1311,13 @@ msgstr "Erro descoñecido"
 
 #. TRANSLATORS: a device is missing from the file system table (usually /etc/fstab)
 #. tell the caller that no matching device was found
-#: ../exo-mount/exo-mount-fstab.c:132
-#: ../exo-mount/exo-mount-hal.c:374
+#: ../exo-mount/exo-mount-fstab.c:132 ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
 msgstr ""
 
 #. definitely not a device that we're able to mount, eject or unmount
-#: ../exo-mount/exo-mount-hal.c:224
-#: ../exo-mount/exo-mount-hal.c:280
+#: ../exo-mount/exo-mount-hal.c:224 ../exo-mount/exo-mount-hal.c:280
 #, c-format
 msgid "Given device \"%s\" is not a volume or drive"
 msgstr ""
@@ -1344,7 +1342,9 @@ msgstr ""
 
 #: ../exo-mount/exo-mount-hal.c:856
 #, c-format
-msgid "Blank discs cannot be mounted, use a CD recording application like Xfburn to record audio or data on the disc"
+msgid ""
+"Blank discs cannot be mounted, use a CD recording application like Xfburn to "
+"record audio or data on the disc"
 msgstr ""
 
 #: ../exo-mount/exo-mount-hal.c:867
@@ -1420,7 +1420,9 @@ msgid "Must not specify both a HAL device UDI and a device file simultaneously"
 msgstr ""
 
 #: ../exo-mount/main.c:154
-msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
+msgid ""
+"Cannot mount by HAL device UDI, because HAL support was disabled for this "
+"build"
 msgstr ""
 
 #: ../exo-mount/main.c:161
@@ -1475,7 +1477,9 @@ msgstr "Desmontando o dispositivo"
 
 #: ../exo-mount-notify/main.c:233
 #, c-format
-msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
+msgid ""
+"The device \"%s\" is being unmounted by the system. Please do not remove the "
+"media or disconnect the drive."
 msgstr ""
 
 #. not read-only, writing back data
@@ -1485,7 +1489,9 @@ msgstr "Escribindo os datos no dispositivo"
 
 #: ../exo-mount-notify/main.c:241
 #, c-format
-msgid "There is data that needs to be written to the device \"%s\" before it can be removed. Please do not remove the media or disconnect the drive."
+msgid ""
+"There is data that needs to be written to the device \"%s\" before it can be "
+"removed. Please do not remove the media or disconnect the drive."
 msgstr ""
 
 #: ../exo-open/main.c:59
@@ -1501,19 +1507,23 @@ msgid "  -?, --help                          Print this help message and exit"
 msgstr ""
 
 #: ../exo-open/main.c:63
-msgid "  -V, --version                       Print version information and exit"
-msgstr "  -V, --version                       Mostra a información da versión e sae"
+msgid ""
+"  -V, --version                       Print version information and exit"
+msgstr ""
+"  -V, --version                       Mostra a información da versión e sae"
 
 #: ../exo-open/main.c:65
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, where\n"
+"                                      TYPE with the optional PARAMETERs, "
+"where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
 
 #: ../exo-open/main.c:69
 msgid ""
-"  --working-directory DIRECTORY       Default working directory for applications\n"
+"  --working-directory DIRECTORY       Default working directory for "
+"applications\n"
 "                                      when using the --launch option."
 msgstr ""
 
@@ -1552,4 +1562,3 @@ msgstr "Produciuse un erro ó abrir o URL \"%s\"."
 
 #~ msgid "Button Label|Preferred Applications"
 #~ msgstr "Aplicacións Preferidas"
-
