--- a/po-doc/gl.po
+++ b/po-doc/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: xfce-i18n@xfce.org\n"
 "POT-Creation-Date: 2009-04-20 15:37+0200\n"
-"PO-Revision-Date: 2009-04-14 22:14+0100\n"
+"PO-Revision-Date: 2009-04-23 12:57+0100\n"
 "Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
@@ -23,39 +23,30 @@ msgstr ""
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:95(None)
-msgid ""
-"@@image: 'images/exo-preferred-applications-internet.png'; "
-"md5=aad820986d24a1cc052e491cf22100a2"
+msgid "@@image: 'images/exo-preferred-applications-internet.png'; md5=aad820986d24a1cc052e491cf22100a2"
 msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:117(None)
-msgid ""
-"@@image: 'images/exo-preferred-applications-webbrowser-menu.png'; "
-"md5=5aebcc859c5b3bffbb6141fb7e51cd7d"
+msgid "@@image: 'images/exo-preferred-applications-webbrowser-menu.png'; md5=5aebcc859c5b3bffbb6141fb7e51cd7d"
 msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:140(None)
-msgid ""
-"@@image: 'images/exo-preferred-applications-webbrowser-custom.png'; "
-"md5=8029c8ff46e17b868286f47bb3598d8d"
+msgid "@@image: 'images/exo-preferred-applications-webbrowser-custom.png'; md5=8029c8ff46e17b868286f47bb3598d8d"
 msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:178(None)
-msgid ""
-"@@image: 'images/exo-preferred-applications-utilities.png'; "
-"md5=5f789aa388d6fc1ea613a3d26c4fb0d7"
+msgid "@@image: 'images/exo-preferred-applications-utilities.png'; md5=5f789aa388d6fc1ea613a3d26c4fb0d7"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:13(title)
-#, fuzzy
 msgid "Xfce 4 Preferred Applications"
-msgstr "Ir ao diálogo de aplicacións preferidas"
+msgstr "Aplicacións preferidas de Xfce 4"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:18(year)
 msgid "2004"
@@ -74,13 +65,7 @@ msgid "Benedikt Meurer"
 msgstr "Benedikt Meurer"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:25(para)
-msgid ""
-"Permission is granted to copy, distribute and/or modify this document under "
-"the terms of the GNU Free Documentation License, Version 1.1 or any later "
-"version published by the Free Software Foundation; with no Invariant "
-"Sections, with no Front-Cover Texts, and with no Back-Cover Texts. The "
-"complete license text is available from the <ulink type=\"http\" url="
-"\"http://www.gnu.org/\">Free Software Foundation</ulink>."
+msgid "Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.1 or any later version published by the Free Software Foundation; with no Invariant Sections, with no Front-Cover Texts, and with no Back-Cover Texts. The complete license text is available from the <ulink type=\"http\" url=\"http://www.gnu.org/\">Free Software Foundation</ulink>."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:37(firstname)
@@ -96,9 +81,7 @@ msgid "benny@xfce.org"
 msgstr "benny@xfce.org"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:45(releaseinfo)
-msgid ""
-"This manual describes version @PACKAGE_VERSION@ of the <emphasis>Xfce "
-"Preferred Applications</emphasis> framework and its components."
+msgid "This manual describes version @PACKAGE_VERSION@ of the <emphasis>Xfce Preferred Applications</emphasis> framework and its components."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:54(title)
@@ -106,13 +89,7 @@ msgid "Introduction"
 msgstr "Introdución"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:56(para)
-msgid ""
-"Throughout the 4.x series of the Xfce Desktop Environment, there was no easy "
-"way for users to set their preferred applications, i.e. the Web Browser that "
-"should be used to open hyperlinks. The <emphasis>Xfce Preferred "
-"Applications</emphasis> framework was added in Xfce 4.3 to overcome this "
-"limitation and provide users with an easy way to select their preferred web "
-"browser, mail reader and terminal emulator."
+msgid "Throughout the 4.x series of the Xfce Desktop Environment, there was no easy way for users to set their preferred applications, i.e. the Web Browser that should be used to open hyperlinks. The <emphasis>Xfce Preferred Applications</emphasis> framework was added in Xfce 4.3 to overcome this limitation and provide users with an easy way to select their preferred web browser, mail reader and terminal emulator."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:69(title)
@@ -120,12 +97,7 @@ msgid "Configuration"
 msgstr "Configuración"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:71(para)
-msgid ""
-"You can access the configuration dialog by clicking on the "
-"<guibutton>Preferred Applications</guibutton> button in the <ulink type="
-"\"http\" url=\"xfce-mcs-manager.html#manager-dialog\">Xfce Settings Manager</"
-"ulink>. The configuration dialog is split into two pages, which are "
-"described in the following sections."
+msgid "You can access the configuration dialog by clicking on the <guibutton>Preferred Applications</guibutton> button in the <ulink type=\"http\" url=\"xfce-mcs-manager.html#manager-dialog\">Xfce Settings Manager</ulink>. The configuration dialog is split into two pages, which are described in the following sections."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:80(title)
@@ -134,11 +106,7 @@ msgid "Internet applications"
 msgstr "Aplicacións de Internet"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:82(para)
-msgid ""
-"The first page of the configuration dialog allows you to select your "
-"preferred Web Browser and Mail Reader. The selected Web Browser will be used "
-"to open hyperlinks that you click on and to display the documentation, "
-"whereas the Mail Reader will be used to compose mails."
+msgid "The first page of the configuration dialog allows you to select your preferred Web Browser and Mail Reader. The selected Web Browser will be used to open hyperlinks that you click on and to display the documentation, whereas the Mail Reader will be used to compose mails."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:98(phrase)
@@ -146,44 +114,25 @@ msgid "Select internet applications"
 msgstr "Seleccionar aplicacións de Internet"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:104(para)
-msgid ""
-"To select a different Web Browser than the current default one, click on the "
-"button in the <guilabel>Default Web Browser</guilabel> section and a list of "
-"web browsers that were detected on your system will appear, as shown in "
-"<xref linkend=\"configuration-webbrowser-menu\"/>."
+msgid "To select a different Web Browser than the current default one, click on the button in the <guilabel>Default Web Browser</guilabel> section and a list of web browsers that were detected on your system will appear, as shown in <xref linkend=\"configuration-webbrowser-menu\"/>."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:113(title)
 #: ../docs/manual/C/exo-preferred-applications.xml.in:120(phrase)
-#, fuzzy
 msgid "Select Web Browser"
-msgstr "Usar navegador _web"
+msgstr "Seleccione o navegador web"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:126(para)
-msgid ""
-"If the Web Browser you are looking for is not automatically detected by the "
-"system, you can select <guimenu><guimenuitem>Other...</guimenuitem></"
-"guimenu> from the drop down menu and a dialog will appear asking you to "
-"enter the command for the custom Web Browser, as shown in <xref linkend="
-"\"configuration-webbrowser-custom\"/>."
+msgid "If the Web Browser you are looking for is not automatically detected by the system, you can select <guimenu><guimenuitem>Other...</guimenuitem></guimenu> from the drop down menu and a dialog will appear asking you to enter the command for the custom Web Browser, as shown in <xref linkend=\"configuration-webbrowser-custom\"/>."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:136(title)
 #: ../docs/manual/C/exo-preferred-applications.xml.in:143(phrase)
-#, fuzzy
 msgid "Specify a custom Web Browser"
-msgstr "Explorador _web a utilizar:"
+msgstr "Especifique un navegador web personalizado"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:149(para)
-msgid ""
-"The special marker <literal>%s</literal> in the command will be substituted "
-"with the URL when you click on a hyperlink. When running just the preferred "
-"Web Browser without any URL, i.e. using <command>exo-open --launch "
-"WebBrowser</command>, only the binary of the specified command will be used "
-"and the parameters will be stripped off. In the example above, with "
-"<command>mywebbrowser \"%s\"</command> as custom Web Browser, the command "
-"<command>mywebbrowser</command> will be used to open the Web Browser without "
-"an URL."
+msgid "The special marker <literal>%s</literal> in the command will be substituted with the URL when you click on a hyperlink. When running just the preferred Web Browser without any URL, i.e. using <command>exo-open --launch WebBrowser</command>, only the binary of the specified command will be used and the parameters will be stripped off. In the example above, with <command>mywebbrowser \"%s\"</command> as custom Web Browser, the command <command>mywebbrowser</command> will be used to open the Web Browser without an URL."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:163(title)
@@ -192,23 +141,15 @@ msgid "Other applications"
 msgstr "Outras aplicacións"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:165(para)
-msgid ""
-"The first page of the configuration dialog allows you to select your "
-"preferred terminal emulator. The preferred terminal emulator will be used "
-"throughout the Xfce Desktop Environment to launch applications that need to "
-"be run in a CLI (command line interface) environment."
+msgid "The first page of the configuration dialog allows you to select your preferred terminal emulator. The preferred terminal emulator will be used throughout the Xfce Desktop Environment to launch applications that need to be run in a CLI (command line interface) environment."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:181(phrase)
-#, fuzzy
 msgid "Select other applications"
-msgstr "Seleccionar outro obxectivo..."
+msgstr "Seleccionar outras aplicacións"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:187(para)
-msgid ""
-"For custom terminal commands, the special marker <literal>%s</literal> will "
-"be substituted with the application to run in the terminal. Otherwise the "
-"same rules apply as described in <xref linkend=\"configuration-internet\"/>."
+msgid "For custom terminal commands, the special marker <literal>%s</literal> will be substituted with the application to run in the terminal. Otherwise the same rules apply as described in <xref linkend=\"configuration-internet\"/>."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:198(title)
@@ -216,21 +157,11 @@ msgid "exo-open"
 msgstr "exo-open"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:200(para)
-msgid ""
-"A simple command line frontend to the <emphasis>Xfce Preferred Applications</"
-"emphasis> framework is included, named <application>exo-open</application>. "
-"Users and developers can use this utility to launch the preferred "
-"application for a certain category or open URLs with the default URL handler."
+msgid "A simple command line frontend to the <emphasis>Xfce Preferred Applications</emphasis> framework is included, named <application>exo-open</application>. Users and developers can use this utility to launch the preferred application for a certain category or open URLs with the default URL handler."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:208(para)
-msgid ""
-"<application>exo-open</application> supports two operation modes. The first "
-"will simply launch the preferred application for a certain category, "
-"optionally passing a parameter (the exact meaning of the term "
-"<emphasis>parameter</emphasis> depends on the category). For example, to "
-"launch the command <command>mutt</command> in the preferred Terminal "
-"Emulator, you would use"
+msgid "<application>exo-open</application> supports two operation modes. The first will simply launch the preferred application for a certain category, optionally passing a parameter (the exact meaning of the term <emphasis>parameter</emphasis> depends on the category). For example, to launch the command <command>mutt</command> in the preferred Terminal Emulator, you would use"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:217(screen)
@@ -239,9 +170,7 @@ msgid "exo-open --launch TerminalEmulator mutt"
 msgstr "exo-open --launch TerminalEmulator mutt"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:219(para)
-msgid ""
-"while to just open the preferred Web Browser, the following command would be "
-"used:"
+msgid "while to just open the preferred Web Browser, the following command would be used:"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:224(screen)
@@ -250,14 +179,7 @@ msgid "exo-open --launch WebBrowser"
 msgstr "exo-open --launch WebBrowser"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:226(para)
-msgid ""
-"The second mode supported by <application>exo-open</application> opens all "
-"parameters passed to it with the default URL handlers. Here URLs mean either "
-"fully qualified URLs (i.e. <literal>http://www.xfce.org/</literal> or "
-"<literal>mailto:xfce4-dev@xfce.org</literal>) or local paths (i.e. <literal>/"
-"home/dude/myfile.txt</literal>). For example to open <literal>/home/dude/"
-"file1.mp3</literal> and <literal>/home/dude/file2.txt</literal> in the "
-"default applications, you would use the following command:"
+msgid "The second mode supported by <application>exo-open</application> opens all parameters passed to it with the default URL handlers. Here URLs mean either fully qualified URLs (i.e. <literal>http://www.xfce.org/</literal> or <literal>mailto:xfce4-dev@xfce.org</literal>) or local paths (i.e. <literal>/home/dude/myfile.txt</literal>). For example to open <literal>/home/dude/file1.mp3</literal> and <literal>/home/dude/file2.txt</literal> in the default applications, you would use the following command:"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:238(screen)
@@ -266,10 +188,7 @@ msgid "exo-open /home/dude/file1.mp3 /home/dude/file2.txt"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:240(para)
-msgid ""
-"To start composing a mail to the <ulink type=\"http\" url=\"http://foo-"
-"projects.org/mailman/listinfo/xfce4-dev\">xfce4-dev</ulink> mailing list, "
-"you can do:"
+msgid "To start composing a mail to the <ulink type=\"http\" url=\"http://foo-projects.org/mailman/listinfo/xfce4-dev\">xfce4-dev</ulink> mailing list, you can do:"
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:246(screen)
@@ -282,49 +201,27 @@ msgid "About"
 msgstr "Acerca de"
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:253(para)
-msgid ""
-"The <emphasis>Xfce Preferred Applications</emphasis> framework and its "
-"components was written by Benedikt Meurer (<email>benny@xfce.org</email>) "
-"for the Xfce Desktop Environment. For more information, please visit the "
-"<ulink url=\"http://www.xfce.org\" type=\"http\">Xfce website</ulink>."
+msgid "The <emphasis>Xfce Preferred Applications</emphasis> framework and its components was written by Benedikt Meurer (<email>benny@xfce.org</email>) for the Xfce Desktop Environment. For more information, please visit the <ulink url=\"http://www.xfce.org\" type=\"http\">Xfce website</ulink>."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:260(para)
-msgid ""
-"To report a bug or make a suggestion regarding the software or this manual, "
-"use the <ulink type=\"http\" url=\"http://bugzilla.xfce.org/\">Xfce Bug "
-"Tracking System</ulink> (Product: <literal>libexo</literal>, Component: "
-"<literal>helpers</literal>)."
+msgid "To report a bug or make a suggestion regarding the software or this manual, use the <ulink type=\"http\" url=\"http://bugzilla.xfce.org/\">Xfce Bug Tracking System</ulink> (Product: <literal>libexo</literal>, Component: <literal>helpers</literal>)."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:267(para)
-msgid ""
-"If you have questions about the use or installation of this package, please "
-"ask on the <ulink type=\"http\" url=\"http://foo-projects.org/mailman/"
-"listinfo/xfce\">xfce</ulink> mailing list. Development discussion takes "
-"place on the <ulink type=\"http\" url=\"http://foo-projects.org/mailman/"
-"listinfo/xfce4-dev\">xfce4-dev</ulink> mailing list."
+msgid "If you have questions about the use or installation of this package, please ask on the <ulink type=\"http\" url=\"http://foo-projects.org/mailman/listinfo/xfce\">xfce</ulink> mailing list. Development discussion takes place on the <ulink type=\"http\" url=\"http://foo-projects.org/mailman/listinfo/xfce4-dev\">xfce4-dev</ulink> mailing list."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:276(para)
-msgid ""
-"This software is distributed under the terms of the GNU General Public "
-"License as published by the Free Software Foundation; either version 2 of "
-"the License, or (at your option) any later version."
+msgid "This software is distributed under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version."
 msgstr ""
 
 #: ../docs/manual/C/exo-preferred-applications.xml.in:282(para)
-#, fuzzy
-msgid ""
-"You should have received a copy of the GNU General Public License along with "
-"this program; if not, write to the Free Software Foundation, Inc., 59 Temple "
-"Place - Suite 330, Boston, MA 02111-1307, USA."
-msgstr ""
-"Debeu recibir unha copia da Licenza Pública Xeral GNU xunto con este "
-"programa; en caso contrario, escriba á Free Software Foundation, Inc., 59 "
-"Temple Place - Suite 330, Boston, MA 02111-1307, USA."
+msgid "You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA."
+msgstr "Debeu recibir unha copia da Licenza pública xeral de GNU xunta con este programa; en caso contrario, escriba á Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA."
 
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
 #: ../docs/manual/C/exo-preferred-applications.xml.in:0(None)
 msgid "translator-credits"
 msgstr "Leandro Regueiro <leandro.regueiro@gmail.com>, 2009."
+
