Allow all arguments in the terminal parameters (part of bug #5301).
(Old svn revision: 29946)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.3.102
+=======
+- Allow all arguments in the terminal parameters (part of bug #5301).
+
 0.3.101
 =======
 - Quote arguments passed to exo-open (bug #5132).
