update xfce-4-6 translations
(Old svn revision: 29987)

--- a/po/ur.po
+++ b/po/ur.po
@@ -1,19 +1,20 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Urdu translation of libexo-0.3.
+# Copyright (C) 2009 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Muhammad Ali Makki <makki.ma@gmai.com>, 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.4\n"
+"Project-Id-Version: libexo-0.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-08 13:54+0200\n"
-"PO-Revision-Date: 2007-10-28 19:39+0200\n"
-"Last-Translator: Muhammad Ali Makki <makki.ma@gmai.com>\n"
+"PO-Revision-Date: 2009-04-27 22:55+0500\n"
+"Last-Translator: Muhammad Ali Makki <makki.ma@gmail.com>\n"
 "Language-Team: Urdu <makki.ma@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-Language: Urdu\n"
 "X-Poedit-Country: PAKISTAN\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -456,7 +457,7 @@ msgstr "دو متواتر سطور کے درمیان خلا کی مقدرا"
 
 #: ../exo/exo-wrap-table.c:190
 msgid "Homogeneous"
-msgstr "ہوم جینئس"
+msgstr "ہومو جینئس"
 
 #: ../exo/exo-wrap-table.c:191
 msgid "Whether the children should be all the same size"
@@ -496,7 +497,7 @@ msgstr "  -h, --ہدایت        ہدایت پیغام طبع کرکے برخا
 #: ../exo-csource/main.c:289
 #, c-format
 msgid "  -V, --version     Print version information and exit\n"
-msgstr "  -V, --ورژن     ورژن معلومات طبع کرکے برخاست کریں\n"
+msgstr "  -V, --ورژن    ورژن کی معلومات پرنٹ کرکے اخراج کریں\n"
 
 #: ../exo-csource/main.c:290
 #, c-format
@@ -560,6 +561,7 @@ msgstr ""
 "آپ %s کی کاپیاں زیرِ شرائط برائے\n"
 "GNU جنرل پبلک لائسنس جو\n"
 "%s کے مصدر پیکج موجود ہے.\n"
+"\n"
 
 #: ../exo-csource/main.c:313 ../exo-desktop-item-edit/main.c:161
 #: ../exo-mount/main.c:130 ../exo-mount-notify/main.c:177
@@ -989,7 +991,7 @@ msgstr "مختص کمانڈ کے انتخاب کے لیے فائل سسٹم بر
 
 #: ../exo-helper/exo-helper-chooser.c:793
 msgid "_Other..."
-msgstr "دوسرا..."
+msgstr "_دیگر..."
 
 #: ../exo-helper/exo-helper-chooser.c:794
 msgid "Use a custom application which is not included in the above list."
@@ -1005,7 +1007,7 @@ msgid ""
 "Browser now and click OK to proceed."
 msgstr ""
 "اپنا مجوزہ ویب براؤزر منتخب کریں\n"
-"اور ٹھیک ہے سے آگے بڑھیں"
+"اور آگے بڑھنے کے لیے ٹھیک ہے پر کلک کریں."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
 msgid ""
@@ -1021,7 +1023,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "اپنا مجوزہ ٹرمنل ایمولیٹر منتخب\n"
-"کریں اور 'ٹھیک ہے' سے آگے بڑھیں"
+"کریں اور ٹھیک ہے سے آگے بڑھیں"
 
 #: ../exo-helper/exo-helper.c:404
 #, c-format
@@ -1038,47 +1040,44 @@ msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
 msgstr "مجوزہ اطلاقیے (ویب براؤزر، ای میل ریڈر، اور ٹرمنل ایمولیٹر)"
 
 #: ../exo-helper/main.c:42
-#, fuzzy
 msgid "Failed to execute default Web Browser"
-msgstr "طے شدہ براؤزر متعین کرنے میں ناکامی"
+msgstr "طے شدہ ویب براؤسر چلانے میں ناکامی"
 
 #: ../exo-helper/main.c:43
-#, fuzzy
 msgid "Failed to execute default Mail Reader"
-msgstr "طے شدہ میل ریڈر متعین کرنے میں ناکامی"
+msgstr "طے شدہ ڈاک مطالعہ گاہ چلانے میں ناکامی"
 
 #: ../exo-helper/main.c:44
-#, fuzzy
 msgid "Failed to execute default Terminal Emulator"
 msgstr "طے شدہ ٹرمنل ایمولیٹر متعین کرنے میں ناکامی"
 
 #: ../exo-helper/main.c:68
-#, fuzzy
 msgid ""
 "Open the Preferred Applications\n"
 "configuration dialog"
-msgstr "اکسفس 4 مجوزہ اطلاقیے"
+msgstr "ترجیح شدہ اطلاقیوں کو تشکیل دینے کا مکالمہ کھولیں"
 
 #: ../exo-helper/main.c:69
 msgid "Settings manager socket"
-msgstr ""
+msgstr "ترتیبات منیجر ساکٹ"
 
 #: ../exo-helper/main.c:69
 msgid "SOCKET ID"
-msgstr ""
+msgstr "ساکٹ آئی ڈی"
 
 #: ../exo-helper/main.c:70
 msgid ""
 "Launch the default helper of TYPE with the optional PARAMETER, where TYPE is "
 "one of the following values."
 msgstr ""
+"نوعیت TYPE کا طے شدہ معاون کار بمع اختیاری PARAMETER کے ساتھ چلائیں، جہاں "
+"TYPE ذیل کی قدروں میں سے ایک قدر ہے"
 
 #: ../exo-helper/main.c:70
 msgid "TYPE [PARAMETER]"
-msgstr ""
+msgstr "TYPE [PARAMETER]"
 
 #: ../exo-helper/main.c:93
-#, fuzzy
 msgid ""
 "The following TYPEs are supported for the --launch command:\n"
 "\n"
@@ -1086,6 +1085,8 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+"کمانڈ چلانے کے لیے مندرجہ ذیل انواع کی معاونت ہے:\n"
+"\n"
 "  WebBrowser       - مجوزہ ویب براؤزر.\n"
 "  MailReader       - مجوزہ ای میل ریڈر.\n"
 "  TerminalEmulator - مجوزہ ٹرمنل ایمولیٹر."
@@ -1093,15 +1094,15 @@ msgstr ""
 #: ../exo-helper/main.c:102
 #, c-format
 msgid "Type '%s --help' for usage."
-msgstr ""
+msgstr "استعمال کے لئے ٹائپ کریں '%s --help'."
 
 #: ../exo-helper/main.c:152
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid helper type \"%s\""
-msgstr "\"%s\" کو کھولنا ممکن نہیں"
+msgstr "غیرموزوں معاون کار نوعیت \"%s\""
 
 #: ../exo-helper/main.c:192
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s (Xfce %s)\n"
 "\n"
@@ -1114,16 +1115,21 @@ msgid ""
 "\n"
 "Please report bugs to <%s>.\n"
 msgstr ""
-"کاپی رائٹ (c) %s\n"
-"        os-cillation e.K. تمام حقوق محفوظ ہیں\n"
+"%s (ایکسفس %s)\n"
 "\n"
-"لکھا گیا از Benedikt Meurer <benny@xfce.org>.\n"
+"کاپی رائٹ (c) 2003-2006\n"
+"        os-cillation e.K. تمام حقوق محفوظ ہیں.\n"
 "\n"
+"تحریر کردہ از Benedikt Meurer <benny@xfce.org>.\n"
+"\n"
+"تیار کردہ بمع Gtk+-%d.%d.%d, چل رہا ہے Gtk+-%d.%d.%d.\n"
+"\n"
+"براہ مہربانی اغلاط کی اطلاع <%s> کو دیں.\n"
 
 #: ../exo-helper/main.c:209
 #, c-format
 msgid "Unknown helper arguments.\n"
-msgstr ""
+msgstr "نامعلوم امدادی دلائل.\n"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.in.h:1
 msgid "Xfce Terminal"
@@ -1147,7 +1153,7 @@ msgstr "ڈبین X ٹرمنل ایمولیٹر"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
-msgstr "Encompass"
+msgstr "اینکمپاس"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
@@ -1155,7 +1161,7 @@ msgstr "اپپفنی ویب براؤزر"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr "Enlightened ٹرمنل ایمولیٹر"
+msgstr "انلائیٹینڈ ٹرمنل ایمولیٹر"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
 msgid "Novell Evolution"
@@ -1191,7 +1197,7 @@ msgstr "Lynx متن براؤزر"
 
 #: ../exo-helper/helpers/midori.desktop.in.in.h:1
 msgid "Midori"
-msgstr ""
+msgstr "میڈوری"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -1203,7 +1209,7 @@ msgstr "موزیلا میل"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
-msgstr "Mutt"
+msgstr "مُٹ"
 
 #: ../exo-helper/helpers/netscape-navigator.desktop.in.in.h:1
 msgid "Netscape Navigator"
@@ -1211,7 +1217,7 @@ msgstr "نیٹ سکیپ نیویگیٹر"
 
 #: ../exo-helper/helpers/nxterm.desktop.in.in.h:1
 msgid "NXterm"
-msgstr "NXterm"
+msgstr "نیکسٹرم"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
@@ -1227,7 +1233,7 @@ msgstr "کلاؤز میل"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
-msgstr "Sylpheed"
+msgstr "سیلفیڈ"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.in.h:1
 msgid "Mozilla Thunderbird"
@@ -1288,26 +1294,26 @@ msgid ""
 "record audio or data on the disc"
 msgstr ""
 "خالی سی ڈی ماؤنٹ نہیں کی جاسکتی، سی ڈی پر صوتی یا مواد ریکارڈنگ کے لیے کوئی "
-"سی ڈی ریکارڈنگ اطلاقیہ استعمال کریں جیسے Xfburn"
+"سی ڈی ریکارڈنگ اطلاقیہ استعمال کریں جیسے ایک ایف برن"
 
 #: ../exo-mount/exo-mount-hal.c:867
 #, c-format
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
 msgstr ""
-"صوتی سیڈیاں ماؤنٹ نہیں کی جاسکتیں، صوتی ٹریک چلانے کے لیے Xfmedia کا استعمال "
-"کریں"
+"صوتی سیڈیاں ماؤنٹ نہیں کی جاسکتیں، صوتی ٹریک چلانے کے لیے ایک ایف میڈیا کا "
+"استعمال کریں"
 
 #. TRANSLATORS: The user tried to eject a device although he's not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:932
-#, fuzzy, c-format
+#, c-format
 msgid "You are not privileged to teardown the crypto layer"
-msgstr "آپ کے پاس حجم \"%s\" کو ماؤنٹ کرنے کے اختیارات نہیں ہیں"
+msgstr "آپ کے پاس ڈیوائس کو نکالنے کے اختیارات نہیں ہیں"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:937
-#, fuzzy, c-format
+#, c-format
 msgid "An application is preventing the crypto layer from being torn down"
-msgstr "کوئی اطلاقیہ حجم \"%s\" کو ان ماؤنٹ ہونے سے روک رہا ہے"
+msgstr "ایک پروگرام حجم کو ان ماؤنٹ کرنے سے روک رہا ہے"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:1021
@@ -1458,7 +1464,7 @@ msgstr ""
 #: ../exo-open/main.c:63
 msgid ""
 "  -V, --version                       Print version information and exit"
-msgstr "  -V, --ورژن                       ورژن معلومات طبع کرکے برخاست کریں"
+msgstr "  -v, --ورژن                       ورژن معلومات طبع کرکے برخاست کریں"
 
 #: ../exo-open/main.c:65
 msgid ""
@@ -1524,8 +1530,9 @@ msgstr "زمرہ \"%s\" کے متعلقہ اطلاقیہ کو چلانے میں 
 msgid "Failed to open URL \"%s\"."
 msgstr "ربط کھولنے میں ناکامی \"%s\"."
 
+#, fuzzy
 #~ msgid "Xfce 4 Preferred Applications"
-#~ msgstr "اکسفس 4 مجوزہ اطلاقیے"
+#~ msgstr "مجوزہ اطلاقیے"
 
 #~ msgid "Failed to launch exo-preferred-applications"
 #~ msgstr "exo-مجوزہ اطلاقیہ کو چلانے میں ناکامی"
