Added initial xfce4-settings Romanian translation Changed mail addresses for myself and Romanian language team Other minor improvements and updates for libexo, thunar, terminal and xfcalendar
(Old svn revision: 29989)

--- a/po/ro.po
+++ b/po/ro.po
@@ -1,15 +1,15 @@
 # Romanian translation for the exo library.
 # Copyright (C) 2006-2009 THE exo'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the exo package.
-# Mișu Moldovan <dumol@gnome.ro>, 2006-2009.
+# Mișu Moldovan <dumol@xfce.org>, 2006-2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-08 13:54+0200\n"
-"PO-Revision-Date: 2009-02-01 20:14+0200\n"
-"Last-Translator: Mișu Moldovan <dumol@gnome.ro>\n"
+"PO-Revision-Date: 2009-05-30 15:11+0300\n"
+"Last-Translator: Mișu Moldovan <dumol@xfce.org>\n"
 "Language-Team: Romanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1090,7 +1090,7 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"Următoarele valori TIP sunt suportate de opțiunea „--launch”:\n"
+"Următoarele valori TIP sunt posibile cu comanda „--launch”:\n"
 "  WebBrowser       - Navigatorul preferat.\n"
 "  MailReader       - Clientul de mail preferat.\n"
 "  TerminalEmulator - Emulatorul de terminal preferat."
@@ -1493,7 +1493,7 @@ msgid ""
 msgstr ""
 "  --working-directory DIRECTORY       Director de lucru implicit pentru "
 "aplicații\n"
-"                                      când se utilizează opțiunea „--launch”."
+"                                      când se utilizează comanda „--launch”."
 
 #: ../exo-open/main.c:72
 msgid "The following TYPEs are supported for the --launch command:"
@@ -1520,8 +1520,8 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Dacă nu specificați opțiunea „--launch”, exo-open va deschide URL-urile\n"
-"specificate cu aplicațiile preferate. Dacă specificați opțiunea „--launch”,\n"
+"Dacă nu specificați comanda „--launch”, exo-open va deschide URL-urile\n"
+"specificate cu aplicațiile preferate. Dacă specificați comanda „--launch”,\n"
 "puteți selecta ce aplicații preferate doriți să porniți și puteți transmite\n"
 "parametri adiționali acelei aplicații (de ex. pentru TerminalEmulator\n"
 "puteți transmite o comandă de executat în acel terminal la pornire)."
